# session-0sw

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: breeding.rs  creature.rs  display.rs  food.rs  main.rs  mutation.rs  round.rs  selection.rs  stats.rs  ui.rs
